--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/svg": "^0.4.0",
     "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "sass": "^1.51.0",
     "sass-loader": "10",
-    "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
