--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/svg": "^0.4.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons-vue": "^1.8.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
